--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,11 @@ html {
 	--line-color: #e5e7eb;
 }
 
+.borderBlack {
+	/* @apply border border-black/10; */
+	@apply border border-red-500;
+}
+
 html.dark {
 	--line-color: rgba(255, 255, 255, 0.2);
 }
