Add client-side-validation for contact me form: required and maxLength

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,7 @@ html {
 }
 
 .borderBlack {
-	/* @apply border border-black/10; */
-	@apply border border-black;
+	@apply border border-black/10;
 }
 
 html.dark {
